<resources>
    <string name="app_name">Nutrition_Diet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="log_in">Log in</string>
    <string name="sign_up_for_free">Sign up for free</string>
    <string name="home_icon">Home Icon</string>
    <string name="search_icon">Search Icon</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="add">+</string>
    <string name="edit">Edit</string>
    <string name="Private_police">Security of Your Personal Data The security of Your
        Personal Data is important to Us, but remember that no method of
        transmission over the Internet, or method of electronic storage
        is 100% secure. While We strive to use commercially acceptable
        means to protect Your Personal Data, We cannot guarantee its
        absolute security. Children\'s Privacy Our Service does not
        address anyone under the age of 13. We do not knowingly
        collect personally identifiable information from anyone
        under the age of 13. If You are a parent or guardian and
        You are aware that Your child has provided Us with
        Personal Data, please contact Us. If We become aware that
        We have collected Personal Data from anyone under the age
        of 13 without verification of parental consent, We take steps
        to remove that information from Our servers. If We need to rely
        on consent as a legal basis for processing Your information and
        Your country requires consent from a parent, We may require Your
        parent\'s consent before We collect and use that information.
        Links to Other Websites Our Service may contain links to other
        websites that are not operated by Us. If You click on a third
        party link, You will be directed to that third party\'s site.
        We strongly advise You to review the Privacy Policy of every
        site You visit. We have no control over and assume no
        responsibility for the content, privacy policies or practices
        of any third party sites or services. Changes to this Privacy
        Policy We may update Our Privacy Policy from time to time.
        We will notify You of any changes by posting the new Privacy
        Policy on this page. We will let You know via email and/or a
        prominent notice on Our Service, prior to the change becoming
        effective and update the date at the top of this Privacy Policy.
        You are advised to review this Privacy Policy periodically for any
        changes. Changes to this Privacy Policy are effective when they are
        posted on this page. Contact Us If you have any questions about
        this Privacy Policy.</string>
    <string name="todo">TODO</string>

</resources>